[gd_scene load_steps=3 format=2]

[ext_resource path="res://characters/stickman/NinjaPlayerInfo.gd" type="Script" id=1]
[ext_resource path="res://characters/stickman/momentum.png" type="Texture" id=2]

[node name="PlayerInfo" type="MarginContainer"]
margin_right = 319.0
margin_bottom = 20.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/margin_right = 20
custom_constants/margin_top = -10
custom_constants/margin_left = 20
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
margin_left = 20.0
margin_top = -10.0
margin_right = 299.0
margin_bottom = 20.0

[node name="TextureRect1" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
margin_right = 20.0
margin_bottom = 30.0
texture = ExtResource( 2 )

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 24.0
margin_right = 44.0
margin_bottom = 30.0
texture = ExtResource( 2 )

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 48.0
margin_right = 68.0
margin_bottom = 30.0
texture = ExtResource( 2 )
